// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Container should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-dp8k64-ArticleListWrapper ei1ca8h0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1vgz1ax-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn2"
      >
        <img
          alt="DSC07717"
          class="css-v2aane-ImageWrapper-ArticleListItem e1shv2yg0"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn1"
      >
        <time
          datetime="2023-01-01T00:00:00.000Z"
        >
          01.01.2023
        </time>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <div
          class="css-1o8pv0h-ArticleListItemAuthors e1tp74qn0"
        >
          Foobar, Foobar
        </div>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1vgz1ax-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn2"
      >
        <img
          alt="DSC07717"
          class="css-v2aane-ImageWrapper-ArticleListItem e1shv2yg0"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn1"
      >
        <time
          datetime="2023-01-01T00:00:00.000Z"
        >
          01.01.2023
        </time>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <div
          class="css-1o8pv0h-ArticleListItemAuthors e1tp74qn0"
        >
          Foobar, Foobar
        </div>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1vgz1ax-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn2"
      >
        <img
          alt="DSC07717"
          class="css-v2aane-ImageWrapper-ArticleListItem e1shv2yg0"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn1"
      >
        <time
          datetime="2023-01-01T00:00:00.000Z"
        >
          01.01.2023
        </time>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <div
          class="css-1o8pv0h-ArticleListItemAuthors e1tp74qn0"
        >
          Foobar, Foobar
        </div>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-dp8k64-ArticleListWrapper ei1ca8h0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1vgz1ax-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn2"
      >
        <img
          alt="DSC07717"
          class="css-v2aane-ImageWrapper-ArticleListItem e1shv2yg0"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn1"
      >
        <time
          datetime="2023-01-01T00:00:00.000Z"
        >
          01.01.2023
        </time>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <div
          class="css-1o8pv0h-ArticleListItemAuthors e1tp74qn0"
        >
          Foobar, Foobar
        </div>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1vgz1ax-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn2"
      >
        <img
          alt="DSC07717"
          class="css-v2aane-ImageWrapper-ArticleListItem e1shv2yg0"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn1"
      >
        <time
          datetime="2023-01-01T00:00:00.000Z"
        >
          01.01.2023
        </time>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <div
          class="css-1o8pv0h-ArticleListItemAuthors e1tp74qn0"
        >
          Foobar, Foobar
        </div>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1vgz1ax-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn2"
      >
        <img
          alt="DSC07717"
          class="css-v2aane-ImageWrapper-ArticleListItem e1shv2yg0"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn1"
      >
        <time
          datetime="2023-01-01T00:00:00.000Z"
        >
          01.01.2023
        </time>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <div
          class="css-1o8pv0h-ArticleListItemAuthors e1tp74qn0"
        >
          Foobar, Foobar
        </div>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-dp8k64-ArticleListWrapper ei1ca8h0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1vgz1ax-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn2"
      >
        <img
          alt="DSC07717"
          class="css-v2aane-ImageWrapper-ArticleListItem e1shv2yg0"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn1"
      >
        <time
          datetime="2023-01-01T00:00:00.000Z"
        >
          01.01.2023
        </time>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <div
          class="css-1o8pv0h-ArticleListItemAuthors e1tp74qn0"
        >
          Foobar, Foobar
        </div>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1vgz1ax-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn2"
      >
        <img
          alt="DSC07717"
          class="css-v2aane-ImageWrapper-ArticleListItem e1shv2yg0"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn1"
      >
        <time
          datetime="2023-01-01T00:00:00.000Z"
        >
          01.01.2023
        </time>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <div
          class="css-1o8pv0h-ArticleListItemAuthors e1tp74qn0"
        >
          Foobar, Foobar
        </div>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1vgz1ax-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn2"
      >
        <img
          alt="DSC07717"
          class="css-v2aane-ImageWrapper-ArticleListItem e1shv2yg0"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn1"
      >
        <time
          datetime="2023-01-01T00:00:00.000Z"
        >
          01.01.2023
        </time>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <div
          class="css-1o8pv0h-ArticleListItemAuthors e1tp74qn0"
        >
          Foobar, Foobar
        </div>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithFilter 1`] = `
<DocumentFragment>
  <article
    class="css-dp8k64-ArticleListWrapper ei1ca8h0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1vgz1ax-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn2"
      >
        <img
          alt="DSC07717"
          class="css-v2aane-ImageWrapper-ArticleListItem e1shv2yg0"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn1"
      >
        <time
          datetime="2023-01-01T00:00:00.000Z"
        >
          01.01.2023
        </time>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <div
          class="css-1o8pv0h-ArticleListItemAuthors e1tp74qn0"
        >
          Foobar, Foobar
        </div>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1vgz1ax-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn2"
      >
        <img
          alt="DSC07717"
          class="css-v2aane-ImageWrapper-ArticleListItem e1shv2yg0"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn1"
      >
        <time
          datetime="2023-01-01T00:00:00.000Z"
        >
          01.01.2023
        </time>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <div
          class="css-1o8pv0h-ArticleListItemAuthors e1tp74qn0"
        >
          Foobar, Foobar
        </div>
      </div>
    </a>
  </article>
</DocumentFragment>
`;
